@@ -100,17 +100,6 @@
       <artifactId>junit-jupiter-engine</artifactId>
       <scope>test</scope>
     </dependency>
-
-
-    <dependency>
-      <groupId>com.fasterxml.jackson.dataformat</groupId>
-      <artifactId>jackson-dataformat-xml</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.codehaus.woodstox</groupId>
-      <artifactId>woodstox-core-asl</artifactId>
-      <version>4.4.1</version>
-    </dependency>
   </dependencies>
 
   <build>
@@ -151,11 +140,27 @@
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.2</version>
+        <version>2.20</version>
+        <!--        <configuration>-->
+        <!--          <useSystemClassLoader>false</useSystemClassLoader>-->
+        <!--          <forkCount>3</forkCount>-->
+        <!--          <reuseForks>true</reuseForks>-->
+        <!--          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
+        <!--        </configuration>-->
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.7</version>
         <configuration>
-          <useSystemClassLoader>false</useSystemClassLoader>
+          <formats>
+            <format>html</format>
+            <format>xml</format>
+          </formats>
+          <check />
         </configuration>
       </plugin>
+
     </plugins>
   </build>
 
